--- a/index.htm
+++ b/index.htm
@@ -47,17 +47,25 @@
 <h1>EL AMOR SIEMPE NOS QUEMA<h1>
 <h1>EL AMOR SIEMPE NOS QUEMA<h1>
 
+<video width="640" height="1136" controls>
+  <source src="WhatsApp Video 2021-05-04 at 23.40.34 (1).mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
 
 <h1>FELIZ CUM</h1>
 
+<picture>
+  <source media="(min-width: 640 × 1136px)" 
+srcset="ac9b5742-5a4d-46d3-b1b8-c3275aecfd18.jpg">
+  <img src="ac9b5742-5a4d-46d3-b1b8-c3275aecfd18.jpg">
+</picture>
+  
+<picture>
+  <source media="(min-width: 867 × 480px)" srcset="2129AB33-64EB-4586-9EA4-81BA4CDAB3BF.jpg">
+  <img src="2129AB33-64EB-4586-9EA4-81BA4CDAB3BF.jpg">
+</picture>
 
-<a href="file:///Users/muymalaanag/Documents/CUM%20KHALED/VIDEO%3C3.htm"> <3 </a>
 
-
-
-<a href="file:///Users/muymalaanag/Documents/CUM%20KHALED/FC!.htm"> <3 </a>
-
-<a href="file:///Users/muymalaanag/Documents/CUM%20KHALED/MARIPOSA.htm"> <3 </a>
 
 
 
